# OSbook

./: README.md  Readme.md  read_file.c  requirements.txt
Chapter6/: README.md  client.cpp
lab_advanced/: README.md  data_gen.py
lab_advanced/lab1/: README.md  check.sh  gendata.py  lab1.sh  mm.py
lab_advanced/lab2/: README.md  check.sh  draw.py  gendata.py  lab2.sh  mm  mm.c
lab_advanced/lab3/: README.md  blockmm.cpp  check.sh  mm_block.cpp  mm_blocked  mm_blocked.cpp  mm_cache.sh  mm_naive  mm_naive.cpp  mm_opt  mm_opt.cpp  mm_order.cpp  param.h
lab_advanced/lab4/: README.md  check.sh  data_gen.py  draw.py  lab02_2000.c  lab02_3000.c  lab02_500.c  lab10_00.c  lab10_02.c  lab10_03.c  lab10_04.c  lab10_test.c  matrix_dual_thread  matrix_dual_thread.c  matrix_lock  matrix_lock.c  matrix_multi_thread  matrix_multi_thread.c  matrix_openmp  matrix_openmp.c  test.sh  (+9 more)
lab_advanced/lab5/lab_CUDA/: CMakeLists.txt  Linux服务器下运行.md  README.md  Windows下运行.md  check.sh  cuda_linux_run.sh  data_gen.py  kernel.cu  test.cu
lab_advanced/lab5/lab_CUDA/input/: compare.py
lab_advanced/lab5/lab_CUDA/output/: time_cuda_30.txt  time_cuda_60.txt  time_cuda_80.txt  time_py_10.txt  time_py_100.txt  time_py_20.txt  time_py_30.txt  time_py_40.txt  time_py_50.txt  time_py_60.txt  time_py_70.txt  time_py_80.txt  time_py_90.txt
lab_advanced/lab5/lab_CUDA/output/time/: time_cuda_10.txt  time_cuda_100.txt  time_cuda_1000.txt  time_cuda_50.txt  time_cuda_70.txt  time_py_10.txt  time_py_100.txt  time_py_1000.txt  time_py_20.txt  time_py_40.txt  time_py_60.txt  time_py_80.txt  time_py_90.txt
(+325 files in other folders)
